# jmath

./: .gitignore  CMakeLists.txt
examples/constant/: CMakeLists.txt  main.cpp
include/jmath/: base.hpp  constant.hpp  expression.hpp  fraction.hpp  jmath.hpp  logarithm.hpp  power.hpp  product.hpp  sum.hpp  variable.hpp
src/: base.cpp  constant.cpp  logarithm.cpp  power.cpp  product.cpp  sum.cpp  variable.cpp
